--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nitrogenbuilder/provider-wordpress",
-	"version": "0.1.2",
+	"version": "0.1.3",
 	"description": "WordPress provider for Nitrogen Builder",
 	"main": "src/index.tsx",
 	"exports": "./src/index.tsx",
@@ -37,7 +37,7 @@
 		"react": "^18.2.0"
 	},
 	"engines": {
-		"node": ">=16.x.x <=18.x.x",
+		"node": ">=18.x.x",
 		"npm": ">=6.0.0"
 	}
 }
